ontol/ontol-compiler/test-cases/error/map/abstract_type.on
def meters (rel* is: number)
def millimeters (rel* is: number)

map(
    meters(m), // ERROR cannot map an abstract type
    millimeters(m * 1000), // ERROR cannot map an abstract type
)
